--- a/Mission6_stevenf4/Views/Home/Index.cshtml
+++ b/Mission6_stevenf4/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "The Joel Hilton Film Collection";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+
+@*Picture of Joel*@
+<img src="~/img/JoelHiltonHeadshot.jpg" height="500" />
+
+
