--- a/Mission6_stevenf4/Views/Shared/_Layout.cshtml
+++ b/Mission6_stevenf4/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                 <li class="nav-item">
                     <a class="nav-link" asp-controller="Home" asp-action="Podcast">My Podcast</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-controller="Home" asp-action="MovieList">Movie List</a>
+                </li>
             </ul>
         </div>
     </nav>
